Learn from Tim's mistakes
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (runTest): Reset the authorAndUserStylesEnabled preference for each
        test.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28443 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-05  Adam Roben  <aroben@apple.com>
+
+        Learn from Tim's mistakes
+
+        * DumpRenderTree/win/DumpRenderTree.cpp:
+        (runTest): Reset the authorAndUserStylesEnabled preference for each
+        test.
+
 2007-12-05  Alp Toker  <alp@atoker.com>
 
         Reviewed by Mark Rowe.
