Reviewed by Hyatt.
        Reverting fix for <rdar://problem/5499918> REGRESSION: insertion point in input field with custom border cuts holes in focus ring interior edges

        We need to just fix the underlying focus ring repaint problem.

        * rendering/RenderTextControl.cpp: (WebCore::RenderTextControl::setStyle):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28447 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-12-05  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Hyatt.
+
+        Reverting fix for <rdar://problem/5499918> REGRESSION: insertion point in input field with custom border cuts holes in focus ring interior edges
+
+        We need to just fix the underlying focus ring repaint problem.
+
+        * rendering/RenderTextControl.cpp: (WebCore::RenderTextControl::setStyle):
+
 2007-12-04  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Darin.
