--- a/WebKitSite/ChangeLog
+++ b/WebKitSite/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-05  Timothy Hatcher  <timothy@apple.com>
+
+        Add another Inspector screenshot for an upcoming blog post.
+
+        * blog-files/InspectorDatabaseBrowser.png: Added.
+
 2007-12-04  Alp Toker  <alp@atoker.com>
 
         Reviewed by Mark Rowe.
