--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-12-05  Mark Rowe  <mrowe@apple.com>
+
+        Reviewed by Kevin Decker.
+
+        Fix 64-bit debug build.
+
+        * platform/text/mac/TextCodecMac.cpp:
+        (WebCore::TextCodecMac::decode): OSStatus is a long for 32-bit but int on 64-bit,
+        so we need to cast it to be able to use a single format specifier on both.
+
 2007-12-05  Kevin Decker  <kdecker@apple.com>
 
         Reviewed by Hyatt.
