Add the .cpp files to the TestNetscapePlugIn target.
        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28459 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-05  Anders Carlsson  <andersca@apple.com>
 
+        Add the .cpp files to the TestNetscapePlugIn target.
+
+        * DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj:
+
+2007-12-05  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Geoff.
         
         Rename the TestNetscapePlugIn .c files to be .cpp.
