--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-05  Darin Adler  <darin@apple.com>
+
+        Reviewed by Adam Roben.
+
+        - fix http://bugs.webkit.org/show_bug.cgi?id=16306
+          Assertion failed in WebCore/loader/FrameLoader.cpp:4642
+
+        * loader/FrameLoader.cpp:
+        (WebCore::FrameLoader::dispatchDidCommitLoad): Check m_creatingInitialEmptyDocument
+        and don't deliver the client call in that case.
+
 2007-12-05  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Kevin Decker.
