Make the entry points extern "C".         * DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp:
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28462 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-05  Anders Carlsson  <andersca@apple.com>
 
+        Make the entry points extern "C".
+        * DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp:
+        
+2007-12-05  Anders Carlsson  <andersca@apple.com>
+
         C++ warning fixes.
         
         * DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp:
