* platform/win/Skipped: Add a crashing test.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28465 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,9 @@
 2007-12-05  Adam Roben  <aroben@apple.com>
 
+        * platform/win/Skipped: Add a crashing test.
+
+2007-12-05  Adam Roben  <aroben@apple.com>
+
         * platform/win/Skipped: Add another test failing due to fonts.
 
 2007-12-05  Dan Bernstein  <mitz@apple.com>
