Build fix: added an #include.
        * kjs/bool_object.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28469 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-05  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: added an #include.
+
+        * kjs/bool_object.cpp:
+
+2007-12-05  Geoffrey Garen  <ggaren@apple.com>
+
         Reviewed by Darin Adler.
 
         Third step in refactoring JSGlobalObject: Moved data members and 
