--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-05  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: added #include.
+
+        * kjs/debugger.cpp:
+
+2007-12-05  Geoffrey Garen  <ggaren@apple.com>
+
         Build fix: added a forward declaration.
 
         * kjs/debugger.h:
