Build fix: Fixed #include spelling.
        * kjs/debugger.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28473 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-05  Geoffrey Garen  <ggaren@apple.com>
 
+        Build fix: Fixed #include spelling.
+
+        * kjs/debugger.cpp:
+
+2007-12-05  Geoffrey Garen  <ggaren@apple.com>
+
         Build fix: added #include.
 
         * kjs/debugger.cpp:
