Build fix: added some #includes.
        * kjs/JSImmediate.cpp:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28475 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -2,6 +2,12 @@
 
         Build fix: added some #includes.
 
+        * kjs/JSImmediate.cpp:
+
+2007-12-05  Geoffrey Garen  <ggaren@apple.com>
+
+        Build fix: added some #includes.
+
         * kjs/JSGlobalObject.cpp:
         * kjs/JSImmediate.cpp:
 
