--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-05  Mark Rowe  <mrowe@apple.com>
+
+        Speculative wx build fix.  Add PlugInInfoStore::pluginNameForMIMEType to the temporary link stubs.
+
+        * platform/wx/TemporaryLinkStubs.cpp:
+
 2007-12-05  Alp Toker  <alp@atoker.com>
 
         Rubber stamped by Mark Rowe.
