--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-06  Geoffrey Garen  <ggaren@apple.com>
+
+        Build fix: access global object directly.
+
+        * plugins/win/PluginViewWin.cpp:
+        (WebCore::PluginViewWin::bindingInstance):
+
 2007-12-06  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Eric.
