--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-06  Anders Carlsson  <andersca@apple.com>
+
+        Remove implementation of testGetIntIdentifier that was accidentally
+        removed somehow (possibly when I made PluginObject be a cpp file).
+        
+        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
+        (pluginInvoke):
+
 2007-12-05  Anders Carlsson  <andersca@apple.com>
 
         Make the entry points extern "C".
