Rename main.c to main.cpp here too.
        * DumpRenderTree/win/TestNetscapePlugin/main.cpp: Copied from DumpRenderTree/win/TestNetscapePlugin/main.c.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28495 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-06  Anders Carlsson  <andersca@apple.com>
+
+        Rename main.c to main.cpp here too.
+        
+        * DumpRenderTree/win/TestNetscapePlugin/main.cpp: Copied from DumpRenderTree/win/TestNetscapePlugin/main.c.
+
 2007-12-06  Sam Weinig  <sam@webkit.org>
 
         Rubber stamped by Geoff.
