--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-06  Dan Bernstein  <mitz@apple.com>
+
+        - updated render tree results for r28483
+
+        * svg/batik/text/textEffect2-expected.txt:
+        * svg/batik/text/textProperties-expected.txt:
+
 2007-12-06  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Sam Weinig.
