--- a/WebKit/mac/ChangeLog
+++ b/WebKit/mac/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-06  Adam Roben  <aroben@apple.com>
+
+        Remove some assertions we know can fire and replace them with a FIXME
+
+        Reviewed by Anders.
+
+        * WebCoreSupport/WebFrameLoaderClient.mm:
+
 2007-12-06  Timothy Hatcher  <timothy@apple.com>
 
         Change the ASSERT added for the previous fix. The ASSERT was firing for 10.5.0.
