Reviewed by Darin
        Tweaked a comment and a few assertions from my last checkin

        * storage/SQLStatement.cpp:
        (WebCore::SQLStatement::execute):
        (WebCore::SQLStatement::clearFailureDueToQuota):
        (WebCore::SQLStatement::lastExecutionFailedDueToQuota):



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28504 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-12-06  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Darin
+
+        Tweaked a comment and a few assertions from my last checkin
+
+        * storage/SQLStatement.cpp:
+        (WebCore::SQLStatement::execute):
+        (WebCore::SQLStatement::clearFailureDueToQuota):
+        (WebCore::SQLStatement::lastExecutionFailedDueToQuota):
+
 2007-12-06  Brady Eidson <beidson@apple.com>
 
         Reviewed by Darin
