Linux build fix - ensure that webcore is linked before jscore so that the linker will know which symbols it needs to link in. Also fix MSVC project file name typo for sample app.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28511 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/wx/ChangeLog
+++ b/WebKit/wx/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-06  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Linux build fix - ensure that webcore is linked before jscore
+        so that the linker will know which symbols it needs to link in.
+        Also fix MSVC project file name typo for sample app.
+
+        * Bakefiles.bkgen:
+        * wxwebkit.bkl:
+
 2007-12-04  Darin Adler  <darin@apple.com>
 
         Reviewed by Kevin Decker.
