--- a/WebKit/mac/ChangeLog
+++ b/WebKit/mac/ChangeLog
@@ -1,3 +1,12 @@
+2007-12-06  Brady Eidson  <beidson@apple.com>
+
+        Reviewed by Oliver's rubber stamp
+
+        Let's go ahead and call the correct UI Delegate method, shall we?
+
+        * WebCoreSupport/WebChromeClient.mm:
+        (WebChromeClient::requestQuotaIncreaseForDatabaseOperation): Call the correct UI delegate
+
 2007-12-06  Adam Roben  <aroben@apple.com>
 
         Remove some assertions we know can fire and replace them with a FIXME
