Reviewed by Darin.
        http://bugs.webkit.org/show_bug.cgi?id=16325
        <rdar://problem/5632997> REGRESSION: www.xerox.ru doesn't work
        
        Test: http/tests/misc/empty-cookie.html

        * platform/mac/CookieJar.mm:
        (WebCore::setCookies): Don't store empty cookies.
        (WebCore::cookies): Filter out empty cookies if we have them, as they could have been set
        with an earlier version of Leopard!



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28515 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,13 @@
+2007-12-07  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Darin.
+
+        http://bugs.webkit.org/show_bug.cgi?id=16325
+        <rdar://problem/5632997> REGRESSION: www.xerox.ru doesn't work
+
+        * http/tests/misc/empty-cookie-expected.txt: Added.
+        * http/tests/misc/empty-cookie.html: Added.
+
 2007-12-06  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
